Fix tray menu focus interruption with lazy loading
- Disable automatic background sync to prevent menu recreation
- Add on-click lazy loading for all server menus
- Implement menu data caching until next user interaction
- Add hash-based change detection to prevent unnecessary updates
- Remove initial sync for pure on-demand data loading

Fixes mouse/keyboard focus interruption caused by constant menu updates.

--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,18 @@ data/
 .cursor/
 assets/mcpproxy.icns
 build-info.json
+.codersinflow
+.vscode
+node_modules
+.venv
+.codex
+out
+dist
+*.vsix
+.claude
+CLAUDE.md
+.git
+__pycache__
+*.pyc
+.next
+.github
